temp_sim_log.txt
file:///Users/ejuchheim/Projects/Simple-Civ/SimpleCiv/engine/dist/game/ai/cities.js:13
const ;
      ^

SyntaxError: Unexpected token ';'
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:431:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:478:27)

Node.js v20.19.4
